# box3cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ownership.md
examples/: hello_box3cpp.cpp
include/box3cpp/: box3cpp.hpp  version.hpp
tests/: smoke_test.cpp
